--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>CICD</title>
 </head>
 <body>
-    
+    <h1>CI-CD process</h1>
+
+    <ol>
+        <li>Create a new repository</li>
+        <li></li>
+    </ol>
 </body>
 </html>
