--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <ol>
         <li>Create a new repository</li>
-        <li></li>
+        <li>Publish your repo as public or private</li>
     </ol>
 </body>
 </html>
