--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <ol>
         <li>Create a new repository</li>
         <li>Publish your repo as public or private</li>
+        <li>Create an index.html (very important)</li>
+        <li>Commit and push your changes to github desktop</li>
+        <li>Go to Netlify</li>
+        <li>Add new site fomr git-import an existing projet</li>
+        <li>Profit and change name</li>
     </ol>
 </body>
 </html>
